<resources>
    <string name="app_name">Ultra Security</string>
    <string name="ultra_security">Ultra Security</string>
    <string name="_1_antivirus_engine_inside">#1 Antivirus engine inside</string>
    <string name="ignored_apps_won_t_be_nscanned_any_more">Ignored apps won\'t be</string>
    <string name="ignored_apps_won_t_be_nscanned_any_more_2">scanned any more</string>
    <string name="deep_scan">Scanning Files</string>
    <string name="scan_safe">Safe</string>
    <string name="scan_safe_btn">DONE</string>
    <string name="about_us">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="eula">EULA</string>
    <string name="about_us_tip">&#169;2016-2020 Ultra Mobile Team.All Rights Reserved.</string>
    <string name="splash_tip">The Best Choice For Mobile Protection</string>
    <string name="splash_tip_two">&#169;2016-2020 Ultra Mobile Team.</string>
    <string name="splash_tip_three">All Rights Reserved</string>
    <string name="ignore_list">Ignore List</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate</string>
    <string name="malicious_behavior_details">• This app has a very low user rating\n• May cause your device to slow down or freeze</string>
    <string name="malicious_behavior">Malicious behavior:</string>
    <string name="risky_application">Risky Application</string>
    <string name="virus_name">Virus name</string>
    <string name="unistall">Unistall</string>
    <string name="browser_history">Browser Privacy</string>
    <string name="browser_history_clear">CLEAN ALL</string>
    <string name="clear_error_tip">There is something wrong. Retry it. </string>
    <string name="sdcard_scan_error_tip">No available SD card for scanning</string>
    <string name="ignore">Ignore</string>
    <string name="home_title_tip">5-Star Antivirus Engine Inside</string>
    <string name="default_virus_name">Trojan/Android.Triada.b[exp,opd]</string>
    <string name="install_time">• Install time:</string>
    <string name="default_simple_date_format">yyyy-MM-dd</string>
    <string name="powered_by_trustlook">Powered by Trustlook</string>
    <string name="result_normal" formatted="false"><![CDATA[• <font color="#52d282" size="22">%s</font> apps scanned.<br>• Virus definition:<font color="#f7a729" size="22">%s</font>]]></string>
    <string name="advice_uninstall" formatted="false"><![CDATA[Advice:<font color="#d73358">Uninstall Immediately</font>]]></string>
    <string name="advice_del" formatted="false"><![CDATA[Advice:<font color="#d73358">Delete Immediately</font>]]></string>
    <string name="clean">CLEAN</string>
    <string name="cache_junk">Cache Junk</string>
    <string name="ad_junk">Ad Junk</string>
    <string name="malware">Malware</string>
    <string name="containning_virus">• Containing Virus:%s</string>
    <string name="uninstall">UNINSTALL</string>
    <string name="last_scan">Last Scan: %s</string>
    <string name="feedback_title">FeedBack</string>
    <string name="feedback_edit_tip">Please write your comments here, provide as much detail as you can.(especially if you are reporting a bug). We are always listening and improving.</string>
    <string name="feedback_bottom_tip">Phone model and version will be collected for diagnosing your issue. We promise not to take any person information, in accordance with our privacy policy.</string>
    <string name="feedback_common">Common Feedback</string>
    <string name="feedback_sug">Suggestion I Got</string>
    <string name="feedback_pro">Problem I Found</string>
    <string name="feedback_force">Forced/Tricked Installation</string>
    <string name="resolve_all">RESOLVE ALL</string>
    <string name="junk">Junk</string>
    <string name="junk_scanned">Junk file scanned</string>
    <string name="browser_privacy">Browser Privacy</string>
    <string name="personal_browser_history">Personal browser history</string>
    <string name="clean_cap">CLEAN</string>
    <string name="done">DONE</string>
    <string name="malware_scan">Malware scan</string>
    <string name="question_dialog_rating">Would you mind rating us a 5-star on Google Play?</string>
    <string name="not_at_all">Not at all</string>
    <string name="give_5_stars">Give 5 Stars</string>
    <string name="title_dialog_rating" formatted="false"><![CDATA[You just cleaned up <font color="#f7a729">%s</font> junk files!]]></string>
    <string name="question_dialog_feedback">Would you mind giving us feedback?\nYour opinions mean a lot to us</string>
    <string name="avl_permissionDescription">AVL Engine</string>
    <string name="avl_permissionLable">AVL Engine</string>
    <string name="avl_permissionGroup">AVL Engine</string>
    <string name="app_lock_title">App Lock</string>
    <string name="lock_recommend_tip1">apps with privacy issues</string>
    <string name="lock_recommend_tip2">Lock your app from accessing your data</string>
    <string name="lock_tip_1">Set the unlock pattern of apps</string>
    <string name="lock_tip_2">Draw the pattern again to confirm</string>
    <string name="lock_tip_3">Email for forgotten password</string>
    <string name="lock_setting_title">AppLock Setting</string>
    <string name="lock_switch_number_code">Switch to PIN Code</string>
    <string name="lock_switch_gesture_code">Switch to Pattern</string>
    <string name="lock_switch_reset">Reset</string>
    <string name="lock_setting">Settings</string>
    <string name="lock_system">System</string>
    <string name="lock_apps">APPS</string>
    <string name="lock_invisible_pattern">Invisible pattern</string>
    <string name="lock_forgot_pwd">Forgot Passcode</string>
    <string name="lock_forgot_pwd_2">Forgot?</string>
    <string name="lock_forgot_tip_1">We will send verification code to your mail</string>
    <string name="lock_send_btn">SEND</string>
    <string name="lock_forgot_tip_2">Enter the verification code and get your passcode</string>
    <string name="lock_forgot_hint">Verification Code</string>
    <string name="lock_reset_btn">RESET PASSCODE</string>
    <string name="lock_menu_text_1">Don\'t lock this app</string>
    <string name="lock_menu_text_2">Confirm your identity</string>
    <string name="lock_model">UnLock Mode</string>
    <string name="lock_model_1">Lock apps at screen off</string>
    <string name="lock_model_2">Lock apps after screen off 3 mins</string>
    <string name="lock_model_3">Lock apps immediately upon exit</string>
    <string name="lock_Enter_password_once_to_unlock_all_apps">Enter password once to unlock all apps</string>
    <string name="lock_Display_Lock_Mode_Hint">Display Lock Mode Hint</string>
    <string name="lock_Password">Password</string>
    <string name="lock_Change_Password">Change Password</string>
    <string name="lock_Invisible_pattern">Invisible pattern</string>
    <string name="lock_screen_lock">Screen Lock Intruder Selfie</string>
    <string name="lock_type_number">Numbers</string>
    <string name="lock_type_pattern">Pattern</string>
    <string name="lock_type_passcode">Passcode</string>
    <string name="lock_type_others">Others</string>
    <string name="lock_change_passcode">Change Passcode</string>
    <string name="lock_allow_exit">Allow a brief exit</string>
    <string name="lock_relock_screen">Re-lock after screen</string>
    <string name="lock_change_email_title">Email for forgotten password</string>
    <string name="lock_btn_done">DONE</string>
    <string name="lock_email_tip">Please enter your Email</string>
    <string name="lock_email_error_tip">Please enter a valid email address</string>
    <string name="lock_permissions_dialog_title">Please find and enable Ultra Security for proper working of AppLock.</string>
    <string name="lock_permissions_dialog_btn">GOT IT!</string>
    <string name="lock_app_desc">Protect your personal info</string>
    <string name="lock_app_desc_gallery3d">Protect your private photos</string>
    <string name="lock_app_desc_msg">Protect your private messages</string>
    <string name="lock_app_desc_info">Protect your personal info</string>
    <string name="lock_check_code_error">Verification code error</string>
    <string name="lock_reset_code_incorrect">Incorrect</string>
    <string name="lock_email_send_success">Email send successfully,check your mailbox</string>
    <string name="lock_reset_success">Passcode reset Successfully</string>
    <string name="lock_first_btn_default">PROTECT</string>
    <string name="lock_first_btn" formatted="false">PROTECT(%s)</string>
    <string name="lock_btn_lock">LOCK</string>
    <string name="lock_success_title">Protected</string>
    <string name="lock_success_desc">The apps below are locked.</string>
    <string name="lock_recording_intro_header">Set the unlock pattern of apps</string>
    <string name="lock_settings_help_how_to_record">How to draw an unlock pattern</string>
    <string name="lock_recording_incorrect_too_short">Should connect at least 4 dots.</string>
    <string name="lock_pattern_entered_header">Pattern Recorded</string>
    <string name="lock_need_to_confirm">Draw the pattern again to confirm</string>
    <string name="lock_need_to_unlock_wrong">Patterns do not match, try again please.</string>
    <string name="lock_pattern_confirmed_header">Email for forgotten password</string>
    <string name="password_gestrue_tips">Draw pattern to unlock</string>
    <string name="password_error_count">Patterns do not match.try again please.</string>
    <string name="lock_draw_unlock_pattern">Draw unlock pattern</string>
    <string name="lock_enter_pin_code">Enter PIN code</string>
    <string name="lockscreen_access_pattern_cell_added">已添加单元格</string>
    <string name="lockscreen_access_pattern_start">Draw an unlock pattern</string>
    <string name="lockscreen_access_pattern_detected">Pattern Saved</string>
    <string name="lockscreen_access_pattern_cleared">Pattern Ereased</string>
    <string name="num_create_text_01">Enter 4 digits password to unlock</string>
    <string name="num_create_text_02">Enter again to confirm</string>
    <string name="num_create_text_03">Passwords did not match, try again</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="password_short">Please enter at least 4 characters.</string>
    <string name="lock_search_hint">Search...</string>
    <string-array name="lock_time_array">
        <item>15 Seconds</item>
        <item>30 Seconds</item>
        <item>1 Minutes</item>
        <item>3 Minutes</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>30 Minutes</item>
    </string-array>
    <string name="wifi_bandwidth_success">Excellent</string>
    <string name="wifi_permissions_dialog_title">To clean apps more efficiently,please find and enable Ultra Security</string>
    <string name="download_security">Download Security</string>
    <string name="accessibility_service_description">Ultra Security(Protect your Phone)</string>
    <string name="show_explore">Show \"Explore\"</string>
    <string name="wifi_safety">Wi-Fi Security</string>
    <string name="app_lock">App Lock</string>
    <string name="download_safety">Download Security</string>
    <string name="deep_scans">Scan Files</string>
    <string name="feed_back">Feed Back</string>
    <string name="user_rate">Rate</string>
    <string name="virus_update">Virus Definition Update</string>
    <string name="settings">Settings</string>
    <string name="_2016_2017_ultra_security_team_nall_right_reserved">©2016-2017 Ultra Security Team+\nAll Rights Reserved</string>
</resources>