<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingRight="@dimen/margin_5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/bg_menu"
        android:orientation="vertical"
        android:showDividers="middle">

        <TextView
            android:id="@+id/text_sdcard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_white_top_corner"
            android:drawableLeft="@drawable/ic_dashbord_sd"
            android:drawablePadding="5dp"
            android:paddingBottom="13dp"
            android:paddingRight="13dp"
            android:paddingLeft="13dp"
            android:paddingTop="18dp"
            android:text="@string/deep_scan"
            android:textColor="@color/font_deep_gray"
            android:textSize="@dimen/text_size_15" />


        <TextView
            android:id="@+id/text_ignore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_white_clicked"
            android:drawableLeft="@drawable/ic_dashbord_ignore"
            android:drawablePadding="5dp"
            android:paddingBottom="13dp"
            android:paddingLeft="13dp"
            android:paddingTop="13dp"
            android:text="@string/ignore_list"
            android:textColor="@color/font_deep_gray"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/text_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_white_clicked"
            android:drawableLeft="@drawable/ic_dashbord_about"
            android:drawablePadding="5dp"
            android:paddingBottom="13dp"
            android:paddingLeft="13dp"
            android:paddingTop="13dp"
            android:text="@string/about_us"
            android:textColor="@color/font_deep_gray"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/text_feedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_white_clicked"
            android:drawableLeft="@drawable/ic_dashbord_feedback"
            android:drawablePadding="5dp"
            android:paddingBottom="13dp"
            android:paddingLeft="13dp"
            android:paddingTop="13dp"
            android:text="@string/feedback"
            android:textColor="@color/font_deep_gray"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/text_rate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_white_bottom_corner"
            android:drawableLeft="@drawable/ic_dashbord_rate"
            android:drawablePadding="5dp"
            android:paddingBottom="18dp"
            android:paddingLeft="13dp"
            android:paddingTop="13dp"
            android:text="@string/rate"
            android:textColor="@color/font_deep_gray"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>
</LinearLayout>

