<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_10dp"
        android:background="@color/bg_normal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/lock_model"
        android:textColor="@color/bg_deep_blue"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/bg_normal"/>


    <TextView
        android:id="@+id/lock_type_num"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableRight="@drawable/lock_select"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/lock_type_number"
        android:textColor="@color/font_deep_gray"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/lock_type_pattern"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableRight="@drawable/lock_unselect"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/lock_type_pattern"
        android:textColor="@color/font_deep_gray"
        android:textSize="16sp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_10dp"
        android:background="@color/bg_normal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/lock_type_passcode"
        android:textColor="@color/bg_deep_blue"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/bg_normal"/>

    <TextView
        android:id="@+id/btn_change_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_white_clicked"
        android:drawableRight="@drawable/arrow_more"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/lock_change_passcode"
        android:textColor="@color/font_deep_gray"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/btn_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_white_clicked"
        android:drawableRight="@drawable/arrow_more"
        android:gravity="center_vertical"
        android:lines="1"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:singleLine="true"
        android:textSize="16sp"
        android:textColor="@color/font_deep_gray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_10dp"
        android:background="@color/bg_normal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/lock_type_others"
        android:textColor="@color/bg_deep_blue"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/bg_normal"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_select_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="25dp"
            android:text="@string/lock_allow_exit"
            android:textColor="@color/font_deep_gray"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/lock_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingRight="15dp"
            android:textColor="@color/font_light_gray"
            android:textSize="16sp"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_allow_exit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_40dp"
            android:layout_marginRight="15dp"/>

    </LinearLayout>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_relock_screen"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="25dp"
        android:paddingRight="15dp"
        android:text="@string/lock_relock_screen"
        android:textColor="@color/font_deep_gray"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bg_normal"/>
</LinearLayout>