<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_rate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_corner"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view_cheers_bg"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/bg_top_corner_rate" />

        <ImageView
            android:id="@+id/img_cheers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_dialog_cheers" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15dp"
        android:gravity="center"
        tools:text="@string/title_dialog_rating"
        android:textColor="@color/black_3"
        android:textSize="@dimen/text_size_15" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:gravity="center"
        android:paddingLeft="@dimen/margin_30dp"
        android:paddingRight="@dimen/margin_30dp"
        android:text="@string/question_dialog_rating"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15dp">

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_left_bottom_corner"
            android:gravity="center"
            android:padding="@dimen/margin_12dp"
            android:text="@string/not_at_all"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/text_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_right_bottom_corner"
            android:gravity="center"
            android:padding="@dimen/margin_12dp"
            android:text="@string/give_5_stars"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>
</LinearLayout>