<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/unlock_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:clipToPadding="false"
                android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>

    <TextView
        android:id="@+id/btn_forgot"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/lock_forgot_pwd_2"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/lock_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_forgot"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/lock_draw_unlock_pattern"
        android:textColor="@color/bg_blue_normal"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/lock_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lock_title"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/lock_menu_text_2"
        android:textSize="19sp"
        android:textColor="@color/font_light_gray"/>

    <com.tools.security.widget.LockPatternView
        android:id="@+id/unlock_lock_view"
        android:layout_width="280.0dip"
        android:layout_height="280.0dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>

